--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <div id="toc-collapse" class="navbar-collapse collapse card bg-secondary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-level="1"><a href="#welcome-to-mkdocs" class="nav-link">Welcome to MkDocs</a>
+            <li class="nav-item" data-level="1"><a href="#pattern-book" class="nav-link">Pattern Book</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-level="2"><a href="#commands" class="nav-link">Commands</a>
+            <li class="nav-item" data-level="2"><a href="#commands-testing-git" class="nav-link">Commands TESTING GIT</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -69,9 +69,9 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="welcome-to-mkdocs">Welcome to MkDocs</h1>
+<h1 id="pattern-book">Pattern Book</h1>
 <p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
-<h2 id="commands">Commands</h2>
+<h2 id="commands-testing-git">Commands TESTING GIT</h2>
 <ul>
 <li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
 <li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
@@ -167,5 +167,5 @@ docs/
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2021-03-04 21:03:20.526993+00:00
+Build Date UTC : 2021-03-04 21:47:04.578686+00:00
 -->
