commiting new changes to Patternbook

--- a/index.html
+++ b/index.html
@@ -283,8 +283,9 @@
                 <h1 id="pattern-book">Pattern Book</h1>
 <p>This is a pattern log for common conflicts that may occur during our project.</p>
 <h2 id="pattern-list">Pattern List:</h2>
+<pre><code>(singleton.txt/ "Singleton Pattern")
+</code></pre>
 <ul>
-<li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
 <li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
 <li><code>mkdocs build</code> - Build the documentation site.</li>
 <li><code>mkdocs -h</code> - Print help message and exit.</li>
