Testing changes to Patternbook

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <h1 id="pattern-book">Pattern Book</h1>
 <p>This is a pattern log for common conflicts that may occur during our project.</p>
 <h2 id="pattern-list">Pattern List:</h2>
-<pre><code>(singleton.txt/ "Singleton Pattern")
+<pre><code>[Singleton](singleton.txt/ "Singleton Pattern")
 </code></pre>
 <ul>
 <li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
