--- a/singleton/index.html
+++ b/singleton/index.html
@@ -384,7 +384,7 @@
 <h2 id="resolution">Resolution:</h2>
 <p>Ensures that only one object of its kind exists and provides a single point of access for any code. This is useful when exactly one object is needed to coordinate actions across the system.</p>
 <p>Implemented in C++:
-    "#include <iostream></p>
+    #include <iostream></p>
 <pre><code>using namespace std;
 
 class Singleton {
@@ -421,7 +421,7 @@ int main(){
    s-&gt;setData(100);
    cout &lt;&lt; s-&gt;getData() &lt;&lt; endl;
    return 0;
-}"
+}
 </code></pre>
 <h2 id="preceding-patterns">Preceding patterns:</h2>
 <p>TBD</p>
