--- a/Test/index.html
+++ b/Test/index.html
@@ -54,7 +54,7 @@
         <div class="md-header__topic" data-md-component="header-topic">
           <span class="md-ellipsis">
             
-              Test
+              Senior Project
             
           </span>
         </div>
