--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <nav class="md-header__inner md-grid" aria-label="Header">
     <a href="." title="Senior Project" class="md-header__button md-logo" aria-label="Senior Project">
       
-  <!-- <svg xmlns="assets/images/DownHILL.png" viewBox="0 0 24 24"><path d="M12 8a3 3 0 0 0 3-3 3 3 0 0 0-3-3 3 3 0 0 0-3 3 3 3 0 0 0 3 3m0 3.54C9.64 9.35 6.5 8 3 8v11c3.5 0 6.64 1.35 9 3.54 2.36-2.19 5.5-3.54 9-3.54V8c-3.5 0-6.64 1.35-9 3.54z"/></svg> -->
-<img class="fit-picture" src="/assets/images/DownHILL.png" alt="logo" width="500" height="600"/>
+  <svg xmlns="assets/images/DownHILL.png" viewBox="0 0 100 100"><path d="M12 8a3 3 0 0 0 3-3 3 3 0 0 0-3-3 3 3 0 0 0-3 3 3 3 0 0 0 3 3m0 3.54C9.64 9.35 6.5 8 3 8v11c3.5 0 6.64 1.35 9 3.54 2.36-2.19 5.5-3.54 9-3.54V8c-3.5 0-6.64 1.35-9 3.54z"/></svg>
+
       
     </a>
     <label class="md-header__button md-icon" for="__drawer">
-      <svg xmlns="assets/images/DownHILL.png" viewBox="0 0 24 24"><path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z"/></svg>
+      <svg xmlns="assets/images/DownHILL.png" viewBox="0 0 24 24"><</svg>
     </label>
     <div class="md-header__title" data-md-component="header-title">
       <div class="md-header__ellipsis">
