--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="md-header__title" data-md-component="header-title">
       <div class="md-header__ellipsis">
         <div class="md-header__topic">
-          <img src="/assets/images/DownHILL.png" alt="logo" style="width:500px;height:600px;">
+          <img src="/assets/images/DownHILL.png" alt="logo" style="width:100;height:100;">
           <span class="md-ellipsis">
             Senior Project
           </span>
