--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="md-header__title" data-md-component="header-title">
       <div class="md-header__ellipsis">
         <div class="md-header__topic">
-          <img class="fit-picture" src="/assets/images/DownHILL.png" alt="logo"/>
+         <link rel="shortcut icon" href="assets/images/DownHILL.png">
           <span class="md-ellipsis">
             Senior Project
           </span>
