--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   
     
     <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer" autocomplete="off">
-    <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search" autocomplete="off">
+   <!-- <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search" autocomplete="off"> -->
     <label class="md-overlay" for="__drawer"></label>
     <div data-md-component="skip">
       
