--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </a>
     
     <label class="md-header__button md-icon" for="__drawer">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z"/></svg>
+      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z"/></svg> -->
+      <img src="assets/images/DownHILL.png" alt="DownHILL" width="50" height="50">
     </label>
     <div class="md-header__title" data-md-component="header-title">
       <div class="md-header__ellipsis">
