--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
           </span>
         </div>
         <div class="md-header__topic" data-md-component="header-topic">
+          
           <span class="md-ellipsis">
-              Senior Project          
+              Test          
           </span>
         </div>
       </div>
