--- a/Code/index.html
+++ b/Code/index.html
@@ -47,7 +47,7 @@
     
     <label class="md-header__button md-icon" for="__drawer">
       
-    <img src="../assets/images/DownHILL.png" alt="DownHILL" width="50" height="50">
+    <!-- <img src="../assets/images/DownHILL.png" alt="DownHILL" width="50" height="50"> -->
     </label>                                                        
     <div class="md-header__title" data-md-component="header-title">
       <div class="md-header__ellipsis">
