--- a/Code/index.html
+++ b/Code/index.html
@@ -42,12 +42,12 @@
   <nav class="md-header__inner md-grid" aria-label="Header">
     <a href=".." title="DownHILL" class="md-header__button md-logo" aria-label="DownHILL">
       <!-- LOGO FOR BANNER -->
-      <img src="../assets/images/DownHILL.png" alt="DownHILL" width="50" height="50">
+      <!-- <img src="../assets/images/DownHILL.png" alt="DownHILL" width="50" height="50"> -->
     </a>
     
     <label class="md-header__button md-icon" for="__drawer">
-      
-    <!-- <img src="../assets/images/DownHILL.png" alt="DownHILL" width="50" height="50"> -->
+      <!-- LOGO FOR BANNER -->
+    <img src="../assets/images/DownHILL.png" alt="DownHILL" width="50" height="50"> 
     </label>                                                        
     <div class="md-header__title" data-md-component="header-title">
       <div class="md-header__ellipsis">
