--- a/Code/index.html
+++ b/Code/index.html
@@ -70,7 +70,7 @@
     </div>
     
       <label class="md-header__button md-icon" for="__search">
-      <img src="../assets/images/DownHILL.png" alt="DownHILL" width="50" height="50">
+     <!-- <img src="../assets/images/DownHILL.png" alt="DownHILL" width="50" height="50"> -->
       </label>
       
   </nav>
