--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 
                 <h1 id="pattern-book">Google Maps API Web App</h1>
 <p>This project is designed to create a map route that will find the most downhill distance from selected points, "A" to "B" or a loop, decided by the user. The idea is to calculate a route that will provide the most downhill cruising experience while getting the user to the requested destination.</p>
+<p>APIs Used: Google Maps JSK, Elevation, and Geocoding</p>
 <h2 id="pattern-layout">Map:</h2>
 <h3> place holder for map. </h3>
       
