--- a/Code/index.html
+++ b/Code/index.html
@@ -132,7 +132,16 @@
                   <h1>Code</h1>
                 
                 <h2 id="forces">Example:</h2>
-                <p>place code here.</p>
+                <p>Code Description.</p>
+                <pre><code>  import java.util.*;
+                             import java.io.*;
+  
+                             class HelloWorld{
+                                public static void main(String[] args)throws Exception{
+                                  System.out.println("My First Java Program.");
+                                }
+                            }     
+                </code></pre>
                
             </article>
           </div>
