--- a/Code/index.html
+++ b/Code/index.html
@@ -133,14 +133,15 @@
                 
                 <h2 id="forces">Example:</h2>
                 <p>Code Description.</p>
-                <pre><code>  import java.util.*;
-                             import java.io.*;
+                <pre><code>  
+                  import java.util.*;
+                  import java.io.*;
   
-                             class HelloWorld{
-                                public static void main(String[] args)throws Exception{
-                                  System.out.println("My First Java Program.");
-                                }
-                            }     
+                  class HelloWorld{
+                    public static void main(String[] args)throws Exception{
+                      System.out.println("My First Java Program.");
+                    }
+                  }     
                 </code></pre>
                
             </article>
