--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 
                 
                 <h1 id="pattern-book">Google Maps API Web App</h1>
-                <p>This project is designed to create a map route that will find the most downhill distance from selected points, "A" to "B" or a loop, decided by the user. The idea is to calculate a route that will provide the most downhill cruising experience while getting the user to the requested destination.</p>
+                <p>This project is designed to create a custom map route that will find the <u>most downhill</u> distance while avoiding as much uphill travel as possible. Custom routes are decided based on selected waypoints, "A" to "B" or a loop, decided by the user. The idea is to calculate a route that will provide the most downhill cruising experience while getting the user to the requested destination.</p>
                 <p>APIs Used: Google - Maps JavaScript, Maps Elevation, and Geocoding</p>
                 <h2 id="pattern-layout">Map:</h2>
                 <h3> place holder for map. </h3>
