commenting index.html

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 <header class="md-header" data-md-component="header">
   <nav class="md-header__inner md-grid" aria-label="Header">
-
-    <a href=".">Menu</a>
+    <!-- NEEDS LINK TO BRING TO MOBILE VIEWBOX MENU -->
+    <!-- <a href=".">Menu</a> -->
     <a href="." title="DownHILL" class="md-header__button md-logo" aria-label="DownHILL">
       <!-- LOGO FOR BANNER -->
       <img src="assets/images/DownHILL.png" alt="DownHILL" width="50" height="50">
