--- a/index.html
+++ b/index.html
@@ -140,13 +140,14 @@
                 <h1 id="pattern-book">Google Maps API Web App</h1>
                 <p>This project is designed to create a custom map route that will find the most <u>consistant downhill</u> route, avoiding as much uphill travel as possible. Custom routes are decided based on selected waypoints, "A" to "B" or a loop, decided by the user. The idea is to calculate a route that will provide the most downhill cruising experience while getting the user to the requested destination.</p>
                 <p>APIs Used: Google - Maps JavaScript, Maps Elevation, and Geocoding</p>
-                <h2 id="pattern-layout">Enter Data</h2>
+                <h2 id="pattern-layout">Enter Data:</h2>
                 <h3> Will your route loop? If so how far do you wish to travel? </h3>
-                <h3> Start:  </h3>
-                <h3> Finish: </h3>
-                <h3> Placehoder button to calculate cutsom route</h3>
+                <button> Start:  </button>
+                <button> Finish: </button>
+                <button> Placehoder button to calculate cutsom route</button>
 
                 <div id="map" style="width:100%;height:400px;"></div>
+              <scriptsrc="map.js"></script>
                 <script>
                   function myMap(){
                     var coord = {
