--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                 <div id="map" style="width:100%;height:400px;"></div>
               <script src="map.js"></script>
-                <script>
+               <!-- <script>
                   function myMap(){
                     var coord = {
                       center:new google.maps.LatLng(46.547581, -87.395592),
@@ -157,7 +157,7 @@
                     var map = new google.maps.Map(document.getElementById('map'), coord);
                    // var marker = new google.maps.Marker({  position: coord, map: map }); 
                   }
-              </script>
+              </script> -->
               <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg&callback=myMap"> </script>
 
       
