adding text input index.html

--- a/index.html
+++ b/index.html
@@ -169,7 +169,13 @@
                 <p>APIs Used: Google - Maps JavaScript, Maps Elevation, and Geocoding</p>
                 <h2 id="pattern-layout">Enter Data:</h2>
                 <h3> Will your route loop? If so how far do you wish to travel? </h3>
+
+                <!-- Creates text and then an input for text -->
+                <label for="start">Type address for starting location</label>
+                <input type="text" id="start" name="starttxt" required minlength="4" maxlength="8" size="10" />
+              
                 <button class="button button1"> Start:  </button>
+                
                 <button class="button button2"> Finish: </button>
                 <button class="button"> Placehoder button to calculate cutsom route</button>
 
