--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@
                 <div></div>
 
                 <label for="finish">Type address for ending location:</label>
-                <input type="text" id="end" name="endTxt" size="20"/>
+                <input type="text" id="end" name="endTxt" size="21"/>
                 <button class="button button1"> Enter </button>
+                <div></div>
                 <button class="button"> Placehoder button to calculate cutsom route</button>
 
                 <div id="map" style="width:100%;height:400px;"></div>
