adding a space between label and input index.html

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                 <button class="button button1"> Enter  </button>
                 <div></div>
 
-                <label for="finish">Type address for ending location: </label>
+                <label for="end">Type address for ending location:</label>
+                <p>" "</p>
                 <input type="text" id="end" name="endTxt" size="20"/>
                 <button class="button button1"> Enter </button>
                 <div></div>
