--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
                 <button class="button button1"> Enter  </button>
                 <div></div>
 
-                <label for="end">Type address for ending location:</label>
-                <p>" "</p>
+                <label for="end">Type address for ending location:</label> <p> </p>
                 <input type="text" id="end" name="endTxt" size="20"/>
                 <button class="button button1"> Enter </button>
                 <div></div>
