--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <button class="button button1"> Enter  </button>
                 <div></div>
 
-                <label for="end">Type address for ending location:&nbsp;</label>
+                <label for="end">Type address for ending location:&nbsp;&nbsp;</label>
                 <input type="text" id="end" name="endTxt" size="20"/>
                 <button class="button button1"> Enter </button>
                 <div></div>
