editing the description index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 
                 
                 <h1 id="pattern-book">Google Maps API Web App</h1>
-                <p>This project is designed to create a custom map route that will find the most <u>consistant downhill</u> route, avoiding as much uphill travel as possible. Custom routes are decided based on selected waypoints, "A" to "B" or a loop, decided by the user. The idea is to calculate a route that will provide the most downhill cruising experience while getting the user to the requested destination.</p>
+                <p>This project is designed to create a custom map route that will find the most <u>consistant downhill</u> route, avoiding as much uphill travel as possible. Custom routes are decided by inputting the desired starting and ending addresses within the given range. The idea is to calculate a route that will provide the best cruising experience while getting the user to the requested destination.</p>
                 <p>APIs Used: Google - Maps JavaScript, Maps Elevation, and Geocoding</p>
                 <h2 id="pattern-layout">Enter Data:</h2>
   
