--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
   
                 <!-- Creates text and then an input for text -->
                 <label for="start">Type address for starting location:</label>
-                <input type="text" id="start" name="startTxt" size="20" placeholder="123 E Something St"/>
+                <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="123 E Something St"/>
   
                 <div></div>
 
                 <label for="end">Type address for ending location:&nbsp;&nbsp;</label>
-                <input type="text" id="end" name="endTxt" size="20" placeholder="123 E Something St"/>
+                <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="123 E Something St"/>
 
                 <div></div>
                 <button class="button button1"> Enter  </button>
