--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div></div>
 
                 <label for="end">Type address for ending location:&nbsp;&nbsp;</label>
-                <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="123 E Something St"/>
+                <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="321 W Somewhere Ave"/>
 
                 <div></div>
                 <button class="button button1"> Enter  </button>
