--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="321 W Somewhere Ave"/>
                  
                   <div></div>
-                  <button>class="button button1"> Enter  </button>
+                  <button class="button button1"> Enter  </button>
               
                 <div id="map" style="width:100%;height:400px;"></div>
 
