--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         cursor: pointer;
       }
 
-    .button1 {background-color: #2094f3;} /* Green */
+    .button1 {background-color: #2094f3;} 
 
     .button1:hover {
       background-color: #2094f3;
