testing update index.html

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="321 W Somewhere Ave"/>
                  
                   <div></div>
-                  <button id="enter"> Enter  </button>  <!-- class="button button1" -->
+                  <button id="enter"> Enter test!  </button>  <!-- class="button button1" -->
               
                 <div id="map" style="width:100%;height:400px;"></div>
 
