--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
                      alert(start + ' ' + end);
                      
                     }
-
+                  </script>
+                  <script>
                     function checkAddress(var strt , var fnsh){
                       //check if strt matches with a valid address 
                       //if not, alert(strt + "is not in range or a valid address");
