note taking index.html

--- a/index.html
+++ b/index.html
@@ -197,7 +197,14 @@
                     }
 
                     function customRoute(var start, var end){
-                      
+                      //Finds Street object with matching address
+                      //Uses geolocation to create marker for start location
+                      //Get Elevation
+                      //Find Intersections connected to starting Street
+                      //Compare start Elevation to Elevation of each Intersections
+                      //Use Algorithm to determine where to go
+                      //Use geolocation for end point of custom route
+                      //Add custom route to array of custom routes to concatonate to a complete route
                     }
 
                   </script>
