--- a/index.html
+++ b/index.html
@@ -186,6 +186,29 @@
                      alert(start + ' ' + end);
                      
                     }
+
+                     // Create the initial InfoWindow.
+                    let infoWindow = new google.maps.InfoWindow({
+                      content: "Click the map to get Lat/Lng!",
+                      position: myLatlng,
+                    });
+
+                    infoWindow.open(map);
+                    // Configure the click listener.
+                    map.addListener("click", (mapsMouseEvent) => {
+                      // Close the current InfoWindow.
+                      infoWindow.close();
+                      // Create a new InfoWindow.
+                      infoWindow = new google.maps.InfoWindow({
+                        position: mapsMouseEvent.latLng,
+                      });
+                      infoWindow.setContent(
+                        JSON.stringify(mapsMouseEvent.latLng.toJSON(), null, 2),
+                      );
+                      infoWindow.open(map);
+                    });
+                    window.myMap = myMap;
+              
                   </script>
                   <script>
                     function checkAddress(var strt , var fnsh){
