--- a/index.html
+++ b/index.html
@@ -212,30 +212,7 @@
 
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <!-- CREATES MAP AND ADDRESS INPUT PLUS BUTTONS -->
-              <script src="map.js">
-                // Create the initial InfoWindow.
-                let infoWindow = new google.maps.InfoWindow({
-                content: "Click the map to get Lat/Lng!",
-                position: myLatlng,
-                });
-
-                infoWindow.open(map);
-                // Configure the click listener.
-                map.addListener("click", (mapsMouseEvent) => {
-                  // Close the current InfoWindow.
-                  infoWindow.close();
-                  // Create a new InfoWindow.
-                  infoWindow = new google.maps.InfoWindow({
-                    position: mapsMouseEvent.latLng,
-                  });
-                  infoWindow.setContent(
-                    JSON.stringify(mapsMouseEvent.latLng.toJSON(), null, 2),
-                  );
-                  infoWindow.open(map);
-                });
-
-                window.myMap = myMap;
-              </script>
+              <script src="map.js"> </script>
 
               <!-- ADDS GOOGLE API WITH API KEY -->
               <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg&callback=myMap"> </script>
