--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <div id="map" style="width:100%;height:400px;"></div>
 
               <!-- ADDS GOOGLE API WITH API KEY -->
-              <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg&callback=myMap" > </script>
+              <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg&callback=myMap" defer > </script>
 
             </article>
           </div>
