--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     
       <script src="assets/javascripts/bundle.9b151c6a.min.js"></script>
      <!-- ADDS GOOGLE API WITH API KEY -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg&callback=myMap"  > </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg&callback=myMap"  > </script>
     
   </body>
 </html>
