--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
   
                 <!-- Creates text and then an input for text -->
                   <label for="start">Type address for starting location:</label>
-                  <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="123 E Something St"/>
+                  <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="123 N 3rd St or Lng: Lat:"/>
     
                   <div></div>
   
                   <label for="end">Type address for ending location:&nbsp;&nbsp;</label>
-                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="321 W Somewhere Ave"/>
+                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="321 W Bluff St or Lng: Lat:"/>
                  
                   <div></div>
                   <button class="button button1" id="enter"> Enter </button>
