--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h2 id="pattern-layout">Enter Data:</h2>
   
                 <!-- Creates text and then an input for text -->
-                  <label for="start">Type address for starting location:</label>
+                  <label for="start">Type address or Lng: Lat:, for starting location:</label>
                   <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="123 N 3rd St or Lng: Lat:"/>
     
                   <div></div>
