--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     
                   <div></div>
   
-                  <label for="end">Type address for ending location:&nbsp;&nbsp;</label>
+                  <label for="end">Type address or Lng: Lat:, for ending location:&nbsp;&nbsp;</label>
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="321 W Bluff St or Lng: Lat:"/>
                  
                   <div></div>
