--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
                 <h2 id="pattern-layout">Enter Data:</h2>
   
                 <!-- Creates text and then an input for text -->
-                  <label for="start">Type address or Lng: Lat:, for starting location:</label>
+                  <label for="start">Type address or Lat/Lng, for starting location:</label>
                   <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="123 N 3rd St or Lng: Lat:"/>
     
                   <div></div>
   
-                  <label for="end">Type address or Lng: Lat:, for ending location:&nbsp;&nbsp;</label>
+                  <label for="end">Type address or Lat/Lng, for ending location:&nbsp;&nbsp;</label>
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="321 W Bluff St or Lng: Lat:"/>
                  
                   <div></div>
