--- a/index.html
+++ b/index.html
@@ -163,14 +163,17 @@
                 <p>This project is designed to create a custom map route that will find the most <u>consistant downhill</u> route, avoiding as much uphill travel as possible. Custom routes are decided by inputting the desired starting and ending addresses within the given range. The idea is to calculate a route that will provide the best cruising experience while getting the user to the requested destination.</p>
                 <p>APIs Used: Google - Maps JavaScript, Maps Elevation, and Geocoding</p>
                 <h2 id="pattern-layout">Enter Data:</h2>
+                <p>You can either manually type address in the format: <b>123 N Something St</b></p>p
+                <p><b>OR</b></p> 
+                <p>You can click the position on the map, copy the coordinates in the pop up window, and then paste them</p>
   
                 <!-- Creates text and then an input for text -->
-                  <label for="start">Type address or Lat/Lng, for starting location:</label>
+                  <label for="start">Starting location:</label>
                   <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="123 N 3rd St or Lat: Lng:"/>
     
                   <div></div>
   
-                  <label for="end">Type address or Lat/Lng, for ending location:&nbsp;&nbsp;</label>
+                  <label for="end">Ending location:&nbsp;&nbsp;</label>
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="321 W Bluff St or Lat: Lng:"/>
                  
                   <div></div>
