--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
   
                 <!-- Creates text and then an input for text -->
                   <label for="start">Starting location:</label>
-                  <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="&quot;123 N 3rd St&quot; or &quot;Lat: Lng:&quot;"/>
+                  <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="&quot;123 N 3rd St&quot; or Lat: Lng:"/>
     
                   <div></div>
   
                   <label for="end">Ending location:&nbsp;&nbsp;</label>
-                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 W Bluff St&quot; or &quot;Lat: Lng:&quot;"/>
+                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 W Bluff St&quot; or Lat: Lng:"/>
                  
                   <div></div>
                   <button class="button button1" id="enter"> Enter </button>
