--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   <div></div>
   
                   <label for="end">Ending location:&nbsp;&nbsp;</label>
-                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 W Bluff St&quot; or Lat: Lng:"/>
+                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 N 4th St&quot; or Lat: Lng:"/>
                  
                   <div></div>
                   <button class="button button1" id="enter"> Enter </button>
