--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@
 
               <div id="map" style="width:100%;height:400px;"></div>
 
+              <!-- TESTING DHMAP ADDRESS ARRAY -->
+              <p id="test"></p>
+              <script src="map.js"> </script>
+              
             </article>
           </div>
         </div>
