--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <!-- CREATES MAP AND ADDRESS INPUT PLUS BUTTONS -->
-              <script type="module" src="map.js"> </script>
+              <script type="module" src="DHMap.js"> </script>
 
               <div id="map" style="width:100%;height:400px;"></div>
 
