--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
 
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <!-- CREATES MAP AND ADDRESS INPUT PLUS BUTTONS -->
-              <script type="module" src="DHMap.js"> </script>
+              <script type="module" src="map.js"> </script>
 
               <div id="map" style="width:100%;height:400px;"></div>
 
               <!-- TESTING DHMAP ADDRESS ARRAY -->
               <p id="test"></p>
-              <script src="map.js"> </script>
+              <script src="DHMap.js"> </script>
               
             </article>
           </div>
