--- a/index.html
+++ b/index.html
@@ -221,7 +221,11 @@
 
               <!-- TESTING DHMAP ADDRESS ARRAY -->
               <p id="test"></p>
-              <script src="DHMap.js"> </script>
+              <script src="DHMap.js">
+                let start = searchAddress("325 E Michigan St");
+                let end = searchAddress("123 Hawley St");
+                
+              </script>
               
             </article>
           </div>
