--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <script src="DHMap.js">
                 let start = searchAddress("325 E Michigan St");
                 let end = searchAddress("123 Hawley St");
-                
+                document.getElementById("test").innerHTML = start + " " + end;
               </script>
               
             </article>
