--- a/index.html
+++ b/index.html
@@ -188,9 +188,10 @@
                     function grabAddress(){
                      var start = document.getElementById("start").value;
                      var end = document.getElementById("end").value;
-                     let strtId = searchAddress(start);
-                     let endId = searchAddress(end);
-                     alert(strtId + ' ' + endId);
+                     //let strtId = searchAddress(start);
+                     //let endId = searchAddress(end);
+                     //alert(strtId + ' ' + endId);
+                      alert(start + ' ' + end);
                     }
                   </script>
                   <script>
