--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   <div></div>
                   <button class="button button1" id="enter"> Enter </button>
                   <!-- testing js code -->
-                  <script src="DHMap.js"> 
+                  <script> 
                     document.getElementById("enter").addEventListener("click", grabAddress);
                     //button.addEventListener('click', grabAddress);
                     //button.addEventListener('click', onButtonClick);
@@ -224,7 +224,7 @@
 
               <!-- TESTING DHMAP ADDRESS ARRAY -->
               <p id="test"></p>
-              
+              <script src="DHMap.js"> </script>
             </article>
           </div>
         </div>
