--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <div id="map" style="width:100%;height:400px;"></div>
 
               <!-- TESTING DHMAP ADDRESS ARRAY -->
-              <p id="test"></p>
+              <!-- <p id="test"></p> -->
               <script src="DHMap.js"> </script>
             </article>
           </div>
