--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                       var findE = searchAddress(end);
                       //NEED TO CONVERT INTERSECTIONS[] ID TO FULL BLOCK ST NAME
                       
-                      if(findS === undefined && findE === undefined)alert("Starting and Ending addresses are not found or within range.");
-                      else if(findS == undefined)alert("Starting address is not found or within range");
-                      else if(findE == undefined)alert("Ending address is not found or within range");
+                      if(findS === undefined && findE === undefined)alert("Starting and Ending locations are not found or within range.");
+                      else if(findS == undefined)alert("Starting location is not found or within range");
+                      else if(findE == undefined)alert("Ending location is not found or within range");
                       else alert(findS + ' ' + findE);
                       //alert(start + ' ' + end);
                     }
