--- a/index.html
+++ b/index.html
@@ -190,8 +190,36 @@
                      var end = document.getElementById("end").value;
 
                       //if values are Lat/Lng, then convert them into block and street names
-                      //if(start.charAt(0).equals('{'))start = convertCoord(start);
-                      //if(end.charAt(0).equals('{'))end = convertCoord(end);
+                      var latStrt;
+                      var lngStrt;
+                      var latEnd;
+                      var lngEnd;
+                      if(start.charAt(0).equals('{') || start.charAt(0).equals('4')){
+                        const latlngStrt = start.split(",",2);
+                        if(latlngStrt[0].substring(0,1) == "4")latStrt = latlngStrt[0];
+                        else latStrt = latlngStrt[0].substring(6);
+                        if(latlngStrt[1].substring(0,2) == "-8") lngStrt = latlngStrt[1];
+                        else lngStrt = latlngStrt[1].substring(5);
+                        const latlngS = {
+                          lat: parseFloat(latStrt),
+                          lng: parseFloat(lngStrt),                        
+                        };
+                        
+                        start = convertCoord(latlngS);
+                      }
+                      if(end.charAt(0).equals('{') || end.charAt(0).equals('4')){
+                        const latlngEnd = end.split(",",2);
+                        if(latlngEnd[0].substring(0,1) == "4")latEnd = latlngEnd[0];
+                        else latEnd = latlngEnd[0].substring(6);
+                        if(latlngEnd[1].substring(0,2) == "-8")lngEnd = latlngEnd[1];
+                        else lngEnd = latlngEnd[1].substring(5);
+                        const latlngE = {
+                          lat: parseFloat(latEnd),
+                          lng: parseFloat(lngEnd),
+                        };
+                        
+                        end = convertCoord(latlngE);
+                      }
 
                       //Searches for valid street
                       var findS = searchAddress(start);
