--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                           lng: parseFloat(lngStrt),                        
                         };
                         
-                        start = convertCoord(latlngS);
+                       // start = convertCoord(latlngS);
                       }
                       if(end.charAt(0) == '{' || end.charAt(0) == '4'){
                         const latlngEnd = end.split(",",2);
@@ -218,7 +218,7 @@
                           lng: parseFloat(lngEnd),
                         };
                         
-                        end = convertCoord(latlngE);
+                        //end = convertCoord(latlngE);
                       }
 
                       //Searches for valid street
