--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                       var lngStrt;
                       var latEnd;
                       var lngEnd;
+                      test();
                       if(start.charAt(0) == '{' || start.charAt(0) == '4'){
                         const latlngStrt = start.split(",",2);
                         if(latlngStrt[0].substring(0,1) == "4")latStrt = latlngStrt[0];
