--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                           lng: parseFloat(lngStrt),                        
                         };
                         
-                       start = convertCoord(latlngS);
+                       //start = convertCoord(latlngS);
                       }
                       if(end.charAt(0) == '{' || end.charAt(0) == '4'){
                         const latlngEnd = end.split(",",2);
