--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         
                         //end = convertCoord(latlngE);
                       }
-
+                      start = convertCoord(start);
                       //Searches for valid street
                       var findS = searchAddress(start);
                       var findE = searchAddress(end);
