--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
                     
                     //Grabs addresses from input text
                     function grabAddress(){
+                      let geocoder;
+                      
                      var start = document.getElementById("start").value;
                      var end = document.getElementById("end").value;
 
