--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         };
                         
                         //end = convertCoord(latlngE);
-                        geocoder.geocode({ location: latlngeE })
+                        geocoder.geocode({ location: latlngE })
                         .then((respoonse) => {
                           if(response.results[0]){
                             //document.getElementById("test").innerHTML = response.results[0].formatted_address;
