--- a/index.html
+++ b/index.html
@@ -209,17 +209,7 @@
                           lng: parseFloat(lngStrt),                        
                         };
                         
-                       //start = convertCoord(latlngS);
-                        //function convertCoord(crd){
-                        geocoder.geocode({ location: latlngS })
-                        .then((respoonse) => {
-                          if(response.results[0]){
-                            document.getElementById("test").innerHTML = response.results[0].formatted_address;
-                            //document.getElementById("test").innerHTML = "TESTING CONVERTCOORD()";
-                          }
-                          else alert("No results found");
-                        })
-                       .catch((e) => window.alert("Geocoder failed due to: " + e));  
+                       start = convertCoord(latlngS);
                   
                       }
                       if(end.charAt(0) == '{' || end.charAt(0) == '4'){
