--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                           lat: parseFloat(latEnd),
                           lng: parseFloat(lngEnd),
                         };
-                        geocoder.geocode({ location: latlngS })
+                        geocoder.geocode({ location: latlngE })
                         .then((respoonse) => {
                           if(response.results[0]){
                             document.getElementById("test").innerHTML = response.results[0].formatted_address;
